# rust-web-mongodb

./: Cargo.toml  README.md
public/: insert.html  list.html
public/css/: styles.css
public/js/: form.js  main.js  modal.js  person.js
src/: db.rs  handlers.rs  main.rs  models.rs
